<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/textViewTeamA"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/scoreTeamA"
                android:textColor="#000000"
                android:textSize="54sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/buttonMarginLeft"
                android:layout_marginEnd="@dimen/buttonMarginRight"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:onClick="addThreeForTeamA"
                android:text="@string/button_3_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/buttonMarginLeft"
                android:layout_marginEnd="@dimen/buttonMarginRight"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:onClick="addTwoForTeatA"
                android:text="@string/button_2_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/buttonMarginLeft"
                android:layout_marginEnd="@dimen/buttonMarginRight"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:onClick="addOneForTeamA"
                android:text="@string/button_free_throw" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="#9e9e9e" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/textViewTeamB"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/scoreTeamB"
                android:textColor="#000000"
                android:textSize="54sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/buttonMarginLeft"
                android:layout_marginEnd="@dimen/buttonMarginRight"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:onClick="addThreeForTeamB"
                android:text="@string/button_3_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/buttonMarginLeft"
                android:layout_marginEnd="@dimen/buttonMarginRight"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:onClick="addTwoForTeatB"
                android:text="@string/button_2_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/buttonMarginLeft"
                android:layout_marginEnd="@dimen/buttonMarginRight"
                android:layout_marginBottom="@dimen/buttonMarginBottom"
                android:onClick="addOneForTeamB"
                android:text="@string/button_free_throw" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/buttonReset" />

</RelativeLayout>